test_regress/t/t_property_nfa_control_unsup.out
%Error-UNSUPPORTED: t/t_property_nfa_control_unsup.v:17:63: Unsupported: temporal property if/case with pass action, cover, negation, abort, or strong end-of-trace obligation
                                                          : ... note: In instance 't'
   17 |   assert property (@(posedge clk) if (a) 1'b1 ##1 b else 1'b1 ##2 c) $display("pass");
      |                                                               ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_nfa_control_unsup.v:18:62: Unsupported: temporal property if/case with pass action, cover, negation, abort, or strong end-of-trace obligation
                                                          : ... note: In instance 't'
   18 |   cover property (@(posedge clk) if (a) 1'b1 ##1 b else 1'b1 ##2 c);
      |                                                              ^~
%Error-UNSUPPORTED: t/t_property_nfa_control_unsup.v:19:68: Unsupported: temporal property if/case with pass action, cover, negation, abort, or strong end-of-trace obligation
                                                          : ... note: In instance 't'
   19 |   assert property (@(posedge clk) not (if (a) 1'b1 ##1 b else 1'b1 ##2 c));
      |                                                                    ^~
%Error-UNSUPPORTED: t/t_property_nfa_control_unsup.v:21:68: Unsupported: temporal property if/case with pass action, cover, negation, abort, or strong end-of-trace obligation
                                                          : ... note: In instance 't'
   21 |   assert property (@(posedge clk) if (a) s_always[1:2] b else 1'b1 ##1 c);
      |                                                                    ^~
%Error-UNSUPPORTED: t/t_property_nfa_control_unsup.v:24:32: Unsupported: impure property if/case selector cannot be sampled once
                                                          : ... note: In instance 't'
   24 |                    if ($random == 0) 1'b1 ##1 b
      |                                ^~
%Error: Exiting due to
